# Yorcvs

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DependencyConfig.cmake  LICENSE  README.md  buildEmscripten.sh  vcpkg.json  yorcvsconfig.json
.github/workflows/: CTests.yml  EmscriptenBuild.yml  cmake.yml  windows.yml
assets/: bleeding_duck.json  duck.json  map.tmx  map2.tmx  player.json  snake.json  testPlayer.json
assets/entities/bleeding_duck/: bleeding_duck.json
assets/entities/duck/: duck.json
assets/entities/snake/: snake.json
assets/entities/test_player_1/: test_player_1.json
assets/entities/test_player_2/: test_player_2.json
assets/entities/training_dummy/: training_dummy.json  training_dummy.lua
assets/scripts/: behavior_chicken.lua  components_test.lua  print_player_position.lua
assets/testmaps/: duck_test.tmx
dependencies/: CMakeLists.txt
resources/: ECSClassDiagram.xml  window_system.mdj
src/: Yorcvs.cpp  Yorcvs.h  Zepyt.cpp  assetmanager.h  components.h  systems.h  systemsSDL2.h  windowSDL2.h
src/assetmanager/: assetmanager.h
src/common/: assetmanager.h  ecs.h  log.h  timer.h  types.h  utilities.h  window.h
src/common/utilities/: log.h  timer.h  ulamspiral.h
src/ecs/: component.h  ecs.h  entity.h  system.h
src/engine/: luaEngine.h  map.h  window.h  windowSDL2.h
src/engine/window/: eventhandler.h  eventhandlersdl2.h  window.h  windowsdl2.h
src/game/: componentSerialization.h  components.h  systems.h
src/game/systems/: animation.h  behaviour.h  collision.h  combat.h  health.h  playercontrol.h  spritesystem.h  staminasystem.h  velocity.h
src/render/: render.h  renderSDL2.h
src/ui/: animationeditor.h  assetmanagerviewer.h  debuginfo.h  performancewindow.h
src/window/: window.h  windowSDL2.h
tests/: CMakeLists.txt  CMakePresets.json  CTestCustom.cmake  ECSComponentCreationDeletion.cpp  ECSEntityManagerCopyMove.cpp  ECSSystemManagerCopyMove.cpp  ECSTestComponentManagerCopyConstructor.cpp  ECSTestEntitiesAndComponents.cpp  ECSmainclassCopyMove.cpp  ECSsystems.cpp  YorcvsLoadMap.cpp  vcpkg.json
tests/CTest/: CMakeLists.txt  CMakePresets.json  ECSComponentCreationDeletion.cpp  ECSEntityManagerCopyMove.cpp  ECSSystemManagerCopyMove.cpp  ECSTestComponentManagerCopyConstructor.cpp  ECSTestEntitiesAndComponents.cpp  ECSmainclassCopyMove.cpp  ECSsystems.cpp  GameTestLoadingEntity.cpp  UtilitiesTestSpiral.cpp  WorldTestnegativeHealthRegen.cpp  YorcvsLoadMap.cpp
tests/CTest/assets/: bleeding_duck.json  duck.json  map.tmx  player.json
tests/CTest/src/: ECSComponentCreationDeletion.cpp  ECSEntityManagerCopyMove.cpp  ECSSystemManagerCopyMove.cpp  ECSTestAddEntityChecked.cpp  ECSTestAddingComponentToEntityWithComponentBehavior.cpp  ECSTestComponentManagerCopyConstructor.cpp  ECSTestEntitiesAndComponents.cpp  ECSTestEntityDestruction.cpp  ECSTestInvalidEntitySignature.cpp  ECSTestSystemAddSetCriteria.cpp  ECSTestSystemUnregistering.cpp  ECSmainclassCopyMove.cpp  ECSsystems.cpp  ECStestentityduplicate.cpp  GameTestLoadingEntity.cpp  TypesTestRectContains.cpp  UtilitiesTestSpiral.cpp  WorldTestnegativeHealthRegen.cpp  YorcvsLoadCharacter.cpp  YorcvsLoadMap.cpp
tests/CTest/testInput/: spiralNumbersDiagonal.txt
tests/assets/: map.tmx  player.json
yorcvs/: CMakeLists.txt
yorcvs/src/: Yorcvs.cpp  Yorcvs.h
yorcvs/src/common/: assetmanager.h  ecs.h  types.h  utilities.h
yorcvs/src/common/utilities/: timer.h  ulamspiral.h
yorcvs/src/engine/: entity_loader.h  luaEngine.h  map.h  serialization.h
yorcvs/src/engine/window/: eventhandler.h  eventhandlersdl2.h  window.h  windowsdl2.h
yorcvs/src/game/: componentSerialization.h  component_serialization.h  components.h  systems.h
yorcvs/src/game/systems/: animation.h  behaviour.h  collision.h  combat.h  health.h  items.h  playercontrol.h  spritesystem.h  staminasystem.h  velocity.h
yorcvs/src/ui/: animationeditor.h  assetmanagerviewer.h  debuginfo.h  entityinteraction.h  inventory.h  performancewindow.h
