cmake_minimum_required(VERSION 3.13)
project(YORCVS_ALL)
if(COMMAND cmake_policy)
      cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
enable_testing()

option(YORCVS_EMSCRIPTEN_PRELOAD_ASSETS_FOLDER "Whether to include the assets folder in the emscripten build or not"  OFF)
#build lua as shared for windows
if(WIN32)
SET(LUA_CMAKE_BUILD_SHARED FALSE CACHE BOOL "Build as shared library" FORCE)
else()
SET(LUA_CMAKE_BUILD_SHARED TRUE CACHE BOOL "Build as shared library" FORCE)
endif()

function(SET_DEFAULT_YORCVS_USE_VCPKG)
    if(WIN32)
        set(DEFAULT_YORCVS_USE_VCPKG TRUE PARENT_SCOPE)
    elseif(UNIX)
        set(DEFAULT_YORCVS_USE_VCPKG FALSE PARENT_SCOPE)
    else()
        set(DEFAULT_YORCVS_USE_VCPKG FALSE PARENT_SCOPE)
    endif()
endfunction()
SET_DEFAULT_YORCVS_USE_VCPKG()
set(YORCVS_USE_VCPKG ${DEFAULT_YORCVS_USE_VCPKG} CACHE BOOL "Use the name of the libraries as they are in vcpkg")
set(YORCVS_BUILD_TESTS TRUE CACHE BOOL "Configure unit tests")

include(DependencyConfig.cmake)
add_subdirectory(yorcvs)
if(EMSCRIPTEN)
    if(YORCVS_EMSCRIPTEN_PRELOAD_ASSETS_FOLDER)
    message(STATUS "Assets folder will be preloaded")
    set_target_properties(Yorcvs PROPERTIES LINK_FLAGS  "--preload-file ./assets")
  endif()
endif()
if(YORCVS_BUILD_TESTS)
add_subdirectory(tests)
endif()

